--- a/front-end/src/styles/Event.css
+++ b/front-end/src/styles/Event.css
@@ -6,12 +6,8 @@ header {
     @apply h-20 w-full text-center p-4 mt-3 mb-6 rounded-lg;
 }
 
-.operations {
+.summary {
     @apply flex space-x-4 place-content-center mb-6;
-}
-
-.operations button {
-    @apply w-24 h-8 rounded-full justify-items-center bg-cyan-50 hover:bg-orange-100 active:bg-orange-200;
 }
 
 .expenses {
