change the styling

--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -9,7 +9,7 @@
 
 .add_events_button {
     @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
-    @apply absolute top-2.5 right-2.5 p-1 px-2.5 border-none rounded-sm cursor-pointer; 
+    @apply absolute mt-4 mr-3 top-5 right-5 p-1 px-2.5 border-none rounded-lg cursor-pointer; 
 }
 
 .add-event-content {
