--- a/front-end/src/styles/FriendsPage.css
+++ b/front-end/src/styles/FriendsPage.css
@@ -162,3 +162,7 @@
 .dark-mode .add-friend-item {
   @apply bg-gray-600 border-gray-500;
 }
+
+.login-button {
+  @apply w-full bg-blue-500 text-white rounded p-2 hover:bg-blue-700 mb-4 mt-6;
+}
