--- a/front-end/src/styles/FriendDetailPage.css
+++ b/front-end/src/styles/FriendDetailPage.css
@@ -43,7 +43,7 @@ header {
 }
 
 .dark-mode .balance {
-  @apply bg-gray-700;
+  @apply bg-gray-800;
 }
 
 .dark-mode .user-avatar {
@@ -51,5 +51,9 @@ header {
 }
 
 .dark-mode .settlements-section {
+  @apply bg-gray-700 mb-4;
+}
+
+.dark-mode #settle-all-btn {
   @apply bg-gray-700 mb-4;
 }
