--- a/front-end/src/styles/AddExpense.css
+++ b/front-end/src/styles/AddExpense.css
@@ -49,7 +49,7 @@
     background-color: #d32f2f;
 }
 
-.space-to-scroll {
+.space-to-scrolls {
     height: 60px;
 }
 
@@ -99,8 +99,8 @@
     @apply bg-red-600; 
 }
 
-.dark-mode .space-to-scroll {
-    @apply bg-gray-800; 
-    height: 20px;
+.dark-mode .space-to-scrolls {
+    @apply bg-gray-700; 
+    height: 60px;
     
 }
