New updates on friends page and add expense page

--- a/front-end/src/styles/FriendsPage.css
+++ b/front-end/src/styles/FriendsPage.css
@@ -59,10 +59,16 @@
 }
 
 .add-friends-btn {
-  @apply w-24 h-16 rounded-full text-center p-1 bg-cyan-100 border-cyan-500 hover:bg-orange-100 active:bg-orange-200;
+  @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
+  @apply absolute mt-4 mr-3 top-5 right-5 p-1 px-2.5 border-none rounded-lg cursor-pointer;
 }
 
 /* Add styling for the pop-up window for add friends*/
+
+.user-list-container {
+  max-height: 300px;
+  overflow-y: auto;
+}
 
 .input-content {
   @apply w-full p-2.5 rounded-full border border-gray-200 text-lg mb-5;
@@ -94,6 +100,10 @@
 
 .checkbox {
   padding-left: 5px;
+}
+
+.search-input {
+  width: 100%;
 }
 
 .space-to-scroll {
