--- a/front-end/src/styles/FriendsPage.css
+++ b/front-end/src/styles/FriendsPage.css
@@ -138,6 +138,7 @@
 
 .dark-mode .add-friends-btn {
   @apply bg-gray-500 border-gray-600 hover:bg-gray-600 active:bg-gray-700;
+  width: auto;
 }
 
 .dark-mode .add-friends-btn-div {
